--- a/style/style.css
+++ b/style/style.css
@@ -38,3 +38,58 @@
   background-color: #300530;
   color: white;
 }
+.card_front {
+  position: absolute;
+  top: 10%;
+  left: 15%;
+  width: 320px;
+  height: 150px;
+  background-image: url(../images/bg-card-front.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 999999;
+  border-radius: 10px;
+  padding: 20px;
+  font-family: sans-serif;
+}
+.card_front .filled_circle {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: white;
+}
+.card_front .empty_circle {
+  width: 15px;
+  height: 15px;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin-top: -24px;
+  margin-left: 42px;
+}
+.card_front .card_int {
+  font-size: 32px;
+  color: white;
+  margin-top: 65px;
+}
+.card_front .mainCard {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  font-size: 12px;
+}
+.card_back {
+  position: absolute;
+  top: 47%;
+  left: 20%;
+  width: 320px;
+  height: 150px;
+  background-image: url(../images/bg-card-back.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 999999;
+  border-radius: 10px;
+  padding: 20px;
+}
