--- a/style/style.less
+++ b/style/style.less
@@ -22,6 +22,11 @@
                 border-radius: 5px;
                 border: 1px solid black;
              }
+             .blank{
+                margin-top: -10px;
+                color: red;
+                display: none;
+             }
              .miniSection{
                 display: flex;
                 input{
